# AiSOC

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  AGENTS.md  AISOC_V8_PROGRESS.md  AI_STACK_PLAN_PROGRESS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSES.md  MIGRATION.md  PROGRESS.md  README.md  ROADMAP.md  docker-compose.airgap.yml  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  ruff.toml
detections/: README.md
services/connectors/: Dockerfile  README.md  pyproject.toml
services/connectors/app/: ingest_client.py  main.py  scheduler.py
services/connectors/app/api/: router.py
services/connectors/app/connectors/: __init__.py  auth0.py  aws_security_hub.py  azure_activity.py  azure_defender.py  azure_entra.py  base.py  carbon_black.py  chronicle.py  cisco_umbrella.py  cloudflare.py  cloudflare_zt.py  cortex_xdr.py  cortex_xsiam.py  crowdstrike.py  datadog.py  datadog_cloud_siem.py  dropbox.py  duo_security.py  elastic.py  email_inbox.py  falco.py  fleetdm.py  gcp_cloud_audit.py  gcp_scc.py  github.py  google_workspace.py  jira_connector.py  lacework.py  m365_audit.py  microsoft_sentinel.py  mimecast.py  okta.py  onepassword.py  osctrl.py  pagerduty.py  proofpoint.py  rapid7_insightidr.py  salesforce.py  sentinelone.py  (+16 more)
services/connectors/app/db/: connector_repo.py  engine.py
services/connectors/app/federated/: query.py
services/connectors/app/pipeline/: __init__.py  filter_rules.py  fingerprint.py
services/connectors/app/scripts/: serve.py
services/connectors/app/security/: credential_vault.py
services/connectors/tests/: test_azure_connectors.py  test_email_inbox.py  test_federated.py  test_hello_connector_example.py  test_osquery_connectors.py  test_pipeline_filter_rules.py  test_pipeline_fingerprint.py  test_push_capabilities.py  test_saas_connectors.py  test_scheduler.py  test_schemas.py
services/slack-bot/: Dockerfile  README.md  pyproject.toml
services/slack-bot/app/: __init__.py  blocks.py  commands.py  interactions.py  main.py
services/slack-bot/tests/: test_aisoc_clients.py  test_approval_audit.py  test_approval_timeout.py  test_blocks.py  test_commands.py  test_config.py  test_hmac_verify.py  test_interactions.py  test_main.py
(+9086 files in other folders)
