[tool.poetry]
name = "aisoc-connectors"
version = "0.1.0"
description = "AiSOC Security Source Connectors"
authors = ["Beenu Arora <beenu@cyble.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.26.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"
boto3 = "^1.34.0"
# Scheduler + DB access for the connector polling loop. apscheduler runs
# in-process (one job per enabled connector instance); SQLAlchemy + asyncpg
# read the canonical connectors table that lives in the API service's
# Postgres so this microservice stays a stateless poller — no schema
# ownership, no migrations.
apscheduler = "^3.10.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
# Cryptography is required to decrypt the auth_config blob written by the
# API service's CredentialVault. We share AISOC_CREDENTIAL_KEY across both
# services via the deployment's secret store.
cryptography = "^42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
respx = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
