[tool.poetry]
name = "aisoc-slack-bot"
version = "0.1.0"
description = "AiSOC Slack bot — slash commands and approval flows for ChatOps-driven SOC operations"
authors = ["Beenu Arora <beenu@cyble.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.109,<0.137"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
slack-bolt = "^1.18.1"
slack-sdk = "^3.27.0"
# Required transitively by slack_bolt.async_app — declared explicitly so a
# resolver pruning unused deps doesn't break the FastAPI/Bolt adapter.
aiohttp = ">=3.9,<4.0"
httpx = ">=0.27,<0.29"
structlog = ">=24.1,<26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
respx = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
